add swagger def and fix queries
